Changed from max to min. Widths less than this cause issues with button sizing and title overflow.

--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar-container {
-  max-width: 260px;
+  min-width: 260px;
   height: 100vh;
   display: flex;
   flex-direction: column;
